# remove-crate-renames

./: Cargo.toml  README.md
src/: main.rs
