[package]
name = "crate-rename"
description = "Remove crate aliasing from `Cargo.toml`."
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
toml = "0.5"
structopt = "0.3.5"
